--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -40,16 +40,21 @@
   "dependencies": {
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
+    "@nestjs/passport": "^7.1.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.0.0",
     "@types/lodash": "^4.14.156",
-    "geotiff": "^1.0.0-beta.12",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
+    "firebase-admin": "^9.0.0",
     "geojson": "^0.5.0",
+    "geotiff": "^1.0.0-beta.12",
     "hashids": "^2.2.1",
     "lodash": "^4.17.15",
     "objects-to-csv": "^1.3.6",
+    "passport": "^0.4.1",
+    "passport-custom": "^1.1.1",
+    "passport-jwt": "^4.0.0",
     "pg": "^8.2.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.5.4",
@@ -64,6 +69,8 @@
     "@types/faker": "^4.1.12",
     "@types/jest": "24.9.0",
     "@types/node": "^13.9.1",
+    "@types/passport": "^1.0.4",
+    "@types/passport-jwt": "^3.0.3",
     "@types/supertest": "^2.0.8",
     "csv-parser": "^2.3.3",
     "faker": "^4.1.0",
@@ -75,8 +82,8 @@
     "ts-loader": "^6.2.1",
     "ts-node": "^8.10.2",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "~3.8.2",
-    "typeorm-seeding": "^1.6.1"
+    "typeorm-seeding": "^1.6.1",
+    "typescript": "~3.8.2"
   },
   "jest": {
     "moduleFileExtensions": [
