--- a/packages/website/.env.example
+++ b/packages/website/.env.example
@@ -1,1 +1,11 @@
-REACT_APP_API_BASE_URL="http://localhost:8080/"
+# Backend base URL
+REACT_APP_API_BASE_URL = 
+
+# Firebase
+REACT_APP_FIREBASE_API_KEY =
+REACT_APP_FIREBASE_AUTH_DOMAIN = 
+REACT_APP_FIREBASE_DABABASE_URL = 
+REACT_APP_FIREBASE_PROJECT_ID = 
+REACT_APP_FIREBASE_STORAGE_BUCKET = 
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID = 
+REACT_APP_FIREBASE_APP_ID = 
