--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -43,6 +43,7 @@
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
     "redux-mock-store": "^1.5.4",
+    "redux-persist": "^6.0.0",
     "typescript": "~3.8.2"
   },
   "scripts": {
