--- a/packages/webpack/cloud-functions/package.json
+++ b/packages/webpack/cloud-functions/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "functions",
+  "name": "cloud-functions",
+  "version": "1.0.0",
   "scripts": {
     "lint": "tslint --project tsconfig.json",
     "build": "tsc",
@@ -12,7 +13,7 @@
   "engines": {
     "node": "10"
   },
-  "main": "lib/functions/src/index.js",
+  "main": "dist/index.js",
   "dependencies": {
     "firebase-admin": "^8.6.0",
     "firebase-functions": "^3.8.0"
@@ -20,7 +21,9 @@
   "devDependencies": {
     "firebase-functions-test": "^0.1.6",
     "tslint": "^5.12.0",
-    "typescript": "^3.2.2"
+    "typescript": "^3.2.2",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12"
   },
   "private": true
 }
