--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -39,7 +39,8 @@
     "seed:config": "yarn typeorm-seeding config",
     "seed:run": "yarn typeorm-seeding seed",
     "daily-worker": "ts-node -r dotenv/config src/workers/dailyData.ts",
-    "backfill-data": "ts-node -r dotenv/config scripts/backfill-daily-data.ts"
+    "backfill-data": "ts-node -r dotenv/config scripts/backfill-daily-data.ts",
+    "augment-reefs": "ts-node -r dotenv/config scripts/augment-reef-data.ts"
   },
   "dependencies": {
     "@nestjs/common": "^7.0.0",
