--- a/packages/website/.env.example
+++ b/packages/website/.env.example
@@ -3,3 +3,7 @@ REACT_APP_API_BASE_URL =
 
 # Firebase
 REACT_APP_FIREBASE_API_KEY =
+
+# Sofar
+REACT_APP_SOFAR_API_TOKEN = 
+REACT_APP_SOFAR_API_BASE_URL = 
