--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@typescript-eslint/eslint-plugin": "^2.0",
     "@typescript-eslint/parser": "^2.0",
     "babel-eslint": "^10.1.0",
+    "cross-spawn": "^7.0.02",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.11.0",
