--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -7,5 +7,5 @@
     "noImplicitAny": false
   },
   "include": ["src"],
-  "files": ["src/custom.d.ts", "ormconfig.ts"]
+  "files": ["src/custom.d.ts", "ormconfig.ts", "firebase.ts"]
 }
