--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -8,9 +8,11 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "tsc -p tsconfig.build.json",
+    "build:cloud-functions": "webpack-cli --config cloud-functions/webpack.config.js",
     "gcp-build": "npm install yarn",
     "deploy:prod": "mv .env .env.bkp && cp .env.prod .env && yarn run build && gcloud app deploy && mv .env.bkp .env",
     "deploy:staging": "mv .env .env.bkp && cp .env.staging .env && yarn run build && gcloud app deploy app-staging.yaml && mv .env.bkp .env",
+    "deploy:cloud-functions": "yarn build:cloud-functions && firebase deploy --only functions:scheduledDailyUpdate",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "yarn run start:prod",
     "start:dev": "cp .env.local .env && nodemon --config nodemon.json",
@@ -35,7 +37,10 @@
     "unhashId:staging": "DOTENV_CONFIG_PATH=.env.staging ts-node -r dotenv/config scripts/url-hash.ts toId",
     "typeorm-seeding": "ts-node $(yarn bin typeorm-seeding)",
     "seed:config": "yarn typeorm-seeding config",
-    "seed:run": "yarn typeorm-seeding seed"
+    "seed:run": "yarn typeorm-seeding seed",
+    "daily-worker": "ts-node -r dotenv/config src/workers/dailyData.ts",
+    "backfill-data": "ts-node -r dotenv/config scripts/backfill-daily-data.ts",
+    "augment-reefs": "ts-node -r dotenv/config scripts/augment-reef-data.ts"
   },
   "dependencies": {
     "@nestjs/common": "^7.0.0",
@@ -43,18 +48,22 @@
     "@nestjs/passport": "^7.1.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.0.0",
-    "@types/lodash": "^4.14.156",
+    "axios": "^0.19.2",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
+    "geo-tz": "^6.0.0",
     "firebase-admin": "^9.0.0",
     "geojson": "^0.5.0",
     "geotiff": "^1.0.0-beta.12",
     "hashids": "^2.2.1",
     "lodash": "^4.17.15",
+    "moment": "^2.27.0",
+    "moment-timezone": "^0.5.31",
     "objects-to-csv": "^1.3.6",
     "passport": "^0.4.1",
     "passport-custom": "^1.1.1",
     "pg": "^8.2.1",
+    "pg-native": "^3.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.5.4",
     "typeorm": "^0.2.25",
@@ -67,12 +76,17 @@
     "@types/express": "^4.17.3",
     "@types/faker": "^4.1.12",
     "@types/jest": "24.9.0",
+    "@types/lodash": "^4.14.156",
+    "@types/moment-timezone": "^0.5.13",
     "@types/node": "^13.9.1",
     "@types/passport": "^1.0.4",
     "@types/passport-strategy": "^0.2.35",
     "@types/supertest": "^2.0.8",
     "csv-parser": "^2.3.3",
     "faker": "^4.1.0",
+    "firebase-admin": "^9.0.0",
+    "firebase-functions": "^3.8.0",
+    "glob": "^7.1.6",
     "jest": "24.9.0",
     "nodemon": "^2.0.4",
     "rimraf": "^3.0.2",
@@ -82,7 +96,10 @@
     "ts-node": "^8.10.2",
     "tsconfig-paths": "^3.9.0",
     "typeorm-seeding": "^1.6.1",
-    "typescript": "~3.8.2"
+    "typescript": "~3.8.2",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12",
+    "yargs": "^15.4.1"
   },
   "jest": {
     "moduleFileExtensions": [
