--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -3,8 +3,9 @@
   "compilerOptions": {
     "emitDecoratorMetadata": true,
     "module": "commonjs",
-    "target": "es6"
+    "target": "es6",
+    "noImplicitAny": false
   },
   "include": ["src"],
-  "files": ["src/custom.d.ts", "ormconfig.ts"]
+  "files": ["src/custom.d.ts", "ormconfig.ts", "firebase.ts"]
 }
