--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.9.5",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
+    "@material-ui/pickers": "^3.2.10",
     "@reduxjs/toolkit": "^1.3",
     "@testing-library/dom": "^7.8.0",
     "@testing-library/jest-dom": "^4.2.4",
