--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -13,9 +13,11 @@
     "deploy:staging": "dotenv -e .env.staging yarn build && yarn run firebase deploy --only hosting:staging-target"
   },
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.9.5",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
+    "@material-ui/pickers": "^3.2.10",
     "@reduxjs/toolkit": "^1.3",
     "@testing-library/dom": "^7.8.0",
     "@testing-library/jest-dom": "^4.2.4",
