--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -51,14 +51,16 @@
     "axios": "^0.19.2",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
-    "geo-tz": "^6.0.0",
     "firebase-admin": "^9.0.0",
+    "geo-tz": "^6.0.0",
     "geojson": "^0.5.0",
     "geotiff": "^1.0.0-beta.12",
     "hashids": "^2.2.1",
     "lodash": "^4.17.15",
     "moment": "^2.27.0",
     "moment-timezone": "^0.5.31",
+    "multer": "^1.4.2",
+    "multer-google-storage": "^1.3.0",
     "objects-to-csv": "^1.3.6",
     "passport": "^0.4.1",
     "passport-custom": "^1.1.1",
@@ -78,6 +80,7 @@
     "@types/jest": "24.9.0",
     "@types/lodash": "^4.14.156",
     "@types/moment-timezone": "^0.5.13",
+    "@types/multer": "^1.4.3",
     "@types/node": "^13.9.1",
     "@types/passport": "^1.0.4",
     "@types/passport-strategy": "^0.2.35",
