--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -60,6 +60,8 @@
     "lodash": "^4.17.15",
     "moment": "^2.27.0",
     "moment-timezone": "^0.5.31",
+    "multer": "^1.4.2",
+    "multer-google-storage": "^1.3.0",
     "objects-to-csv": "^1.3.6",
     "passport": "^0.4.1",
     "passport-custom": "^1.1.1",
@@ -79,6 +81,7 @@
     "@types/jest": "24.9.0",
     "@types/lodash": "^4.14.156",
     "@types/moment-timezone": "^0.5.13",
+    "@types/multer": "^1.4.3",
     "@types/node": "^13.9.1",
     "@types/passport": "^1.0.4",
     "@types/passport-strategy": "^0.2.35",
