--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -43,6 +43,7 @@
     "augment-reefs": "ts-node -r dotenv/config scripts/augment-reef-data.ts"
   },
   "dependencies": {
+    "@google-cloud/storage": "^5.3.0",
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/passport": "^7.1.0",
