--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -55,6 +55,7 @@
     "react-dropzone": "^11.0.3",
     "react-hook-form": "^6.0.8",
     "react-leaflet": "^2.7.0",
+    "react-material-ui-carousel": "^1.8.2",
     "react-player": "^2.3.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
