--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -60,9 +60,11 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-slick": "^0.27.10",
     "react-swipeable-views": "^0.13.9",
     "redux": "^4.0.5",
     "redux-mock-store": "^1.5.4",
+    "slick-carousel": "^1.8.1",
     "typescript": "~3.8.2"
   },
   "jest": {
