--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -58,7 +58,8 @@
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
     "redux-mock-store": "^1.5.4",
-    "typescript": "~3.8.2"
+    "typescript": "~3.8.2",
+    "validator": "^13.1.1"
   },
   "jest": {
     "snapshotSerializers": [
@@ -82,6 +83,7 @@
   },
   "devDependencies": {
     "@types/immutable": "^3.8.7",
+    "@types/validator": "^13.1.0",
     "canvas": "^2.6.1"
   }
 }
