--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -38,7 +38,7 @@
     "typeorm-seeding": "ts-node $(yarn bin typeorm-seeding)",
     "seed:config": "yarn typeorm-seeding config",
     "seed:run": "yarn typeorm-seeding seed",
-    "daily-worker": "ts-node -r dotenv/config src/workers/dailyData.ts",
+    "daily-worker": "ts-node -r dotenv/config scripts/daily-update.ts",
     "backfill-data": "ts-node -r dotenv/config scripts/backfill-daily-data.ts",
     "augment-reefs": "ts-node -r dotenv/config scripts/augment-reef-data.ts"
   },
