--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -38,7 +38,7 @@
     "typeorm-seeding": "ts-node $(yarn bin typeorm-seeding)",
     "seed:config": "yarn typeorm-seeding config",
     "seed:run": "yarn typeorm-seeding seed",
-    "daily-worker": "ts-node -r dotenv/config src/workers/dailyData.ts",
+    "daily-worker": "ts-node -r dotenv/config scripts/daily-update.ts",
     "backfill-data": "ts-node -r dotenv/config scripts/backfill-daily-data.ts",
     "augment-reefs": "ts-node -r dotenv/config scripts/augment-reef-data.ts"
   },
@@ -51,6 +51,7 @@
     "@nestjs/typeorm": "^7.0.0",
     "axios": "^0.19.2",
     "axios-retry": "^3.1.8",
+    "bluebird": "^3.7.2",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "firebase-admin": "^9.0.0",
