--- a/packages/website/.env.example
+++ b/packages/website/.env.example
@@ -12,3 +12,6 @@ REACT_APP_FEATURED_REEF_ID=1
 
 # CARTO Applications
 REACT_APP_CARTO_API_KEY=
+
+# Mapbox token to access custom styles
+REACT_APP_MAPBOX_ACCESS_TOKEN=
