--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -45,6 +45,7 @@
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.0.3",
+    "react-ga": "^3.1.2",
     "react-hook-form": "^6.0.8",
     "react-leaflet": "^2.7.0",
     "react-leaflet-markercluster": "^2.0.0",
