--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -44,11 +44,13 @@
   },
   "dependencies": {
     "@google-cloud/storage": "^5.3.0",
+    "@googlemaps/google-maps-services-js": "^3.1.6",
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/passport": "^7.1.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.0.0",
+    "@types/bluebird": "^3.5.32",
     "axios": "^0.19.2",
     "axios-retry": "^3.1.8",
     "bluebird": "^3.7.2",
@@ -75,7 +77,6 @@
     "typeorm-naming-strategies": "^1.1.0"
   },
   "devDependencies": {
-    "@googlemaps/google-maps-services-js": "^3.1.6",
     "@nestjs/cli": "^7.0.0",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
