--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -49,6 +49,7 @@
     "@nestjs/core": "^7.0.0",
     "@nestjs/passport": "^7.1.0",
     "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/schedule": "^0.4.1",
     "@nestjs/typeorm": "^7.0.0",
     "@types/bluebird": "^3.5.32",
     "axios": "^0.19.2",
