--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -87,7 +87,10 @@ jobs:
             - v1-test-
 
       # Run tests
-      - run: yarn test
+      # This could also be run using lerna: `yarn test` in the main repo, but doing it
+      # explicitly like this separates out the tasks nicely in the UI.
+      - run: cd packages/api && yarn test
+      - run: cd packages/website && yarn test
 
       # Save test cache
       - save_cache:
