--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,10 +54,7 @@ jobs:
     steps:
       - checkout_and_restore_dependencies
 
-      - run: yarn install --ignore-engines
-      - run:
-          name: Check yarn.lock
-          command: git diff --exit-code yarn.lock
+      - run: yarn install --ignore-engines --frozen-lockfile
 
       - save_cache:
           paths:
