--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -99,8 +99,7 @@
     "swagger-ui-express": "^4.1.6",
     "ts-exif-parser": "^0.2.1",
     "typeorm": "^0.2.25",
-    "typeorm-naming-strategies": "^1.1.0",
-    "xlsx": "^0.16.9"
+    "typeorm-naming-strategies": "^1.1.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
