--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aqualink-app",
+  "name": "api",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -119,7 +119,7 @@
     "firebase-admin": "^9.0.0",
     "firebase-functions": "^3.8.0",
     "glob": "^7.1.6",
-    "jest": "24.9.0",
+    "jest": "26.6.0",
     "nodemon": "^2.0.4",
     "rimraf": "^3.0.2",
     "supertest": "^4.0.2",
@@ -128,7 +128,6 @@
     "ts-node": "^8.10.2",
     "tsconfig-paths": "^3.9.0",
     "typeorm-seeding": "^1.6.1",
-    "typescript": "~3.8.2",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "yargs": "^15.4.1"
