--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ references:
 executors:
   default:
     docker:
-      - image: node:16
+      - image: node:16-browsers
         environment:
           DATABASE_URL: postgres://postgres:CHANGE-ME@postgres:5432/postgres
           TEST_DATABASE_URL: postgres://postgres:CHANGE-ME@postgres:5432/postgres
@@ -87,7 +87,7 @@ jobs:
       # This could also be run using lerna: `yarn test` in the main repo, but doing it
       # explicitly like this separates out the tasks nicely in the UI.
       - run: cd packages/api && yarn test
-      - run: cd packages/website && yarn test
+      - run: cd packages/website && yarn test -i
 
       # Save test cache
       - save_cache:
