--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -87,6 +87,7 @@
     "geotiff": "^1.0.4",
     "hashids": "^2.2.1",
     "lodash": "^4.17.15",
+    "md5-file": "^5.0.0",
     "moment": "^2.27.0",
     "moment-timezone": "^0.5.31",
     "multer": "^1.4.2",
