--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -21,7 +21,7 @@
     "deploy:prod": "export DEPLOY_ENV=prod && yarn deploy:app && yarn deploy:cloud-functions",
     "deploy:staging": "export DEPLOY_ENV=staging && yarn deploy:app && yarn deploy:cloud-functions:staging",
     "deploy:programize": "export DEPLOY_ENV=programize && yarn deploy:app && yarn deploy:cloud-functions:programize",
-    "deploy:cloud-functions": "yarn build:cloud-functions && firebase deploy --only functions:pingService,functions:scheduledDailyUpdate,functions:scheduledSpotterTimeSeriesUpdate,functions:scheduledSSTTimeSeriesUpdate,functions:scheduledVideoStreamsCheck",
+    "deploy:cloud-functions": "yarn build:cloud-functions && firebase deploy --only functions:pingService,functions:scheduledDailyUpdate,functions:scheduledSpotterTimeSeriesUpdate,functions:scheduledWindWaveTimeSeriesUpdate,functions:scheduledSSTTimeSeriesUpdate,functions:scheduledVideoStreamsCheck",
     "deploy:cloud-functions:prod": "yarn deploy:cloud-functions -P ocean-systems",
     "deploy:cloud-functions:staging": "yarn deploy:cloud-functions -P aqualink-dev",
     "deploy:cloud-functions:programize": "yarn deploy:cloud-functions -P aqualink-programize",
