--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -20,6 +20,7 @@
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/pickers": "^3.2.10",
     "@reduxjs/toolkit": "^1.3",
+    "@sketchfab/viewer-api": "^1.12.0",
     "@testing-library/dom": "^7.8.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
