--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -102,11 +102,8 @@ jobs:
             # fallback to using the latest cache if no exact match is found
             - v1-test-
 
-      # Run tests
-      # This could also be run using lerna: `yarn test` in the main repo, but doing it
-      # explicitly like this separates out the tasks nicely in the UI.
+      # Run API tests
       - run: cd packages/api && yarn test
-      - run: cd packages/website && yarn test
 
       # Save test cache
       - save_cache:
