--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -37,6 +37,7 @@
     "start:prod": "node dist/src/main.js",
     "lint": "eslint \"{src,apps,libs,test,scripts}/**/*.{ts,js}\" --max-warnings 0 --fix",
     "test": "cross-env NODE_ENV=test jest --config ./test/jest.json",
+    "test:silent": "jest --silent",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
