--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -60,7 +60,8 @@
     "upload-hobo-data": "ts-node -r dotenv/config scripts/upload-hobo-data.ts",
     "upload-sonde-data": "ts-node -r dotenv/config scripts/upload-sonde-data.ts",
     "backfill-sofar-time-series": "ts-node -r dotenv/config scripts/backfill-sofar-time-series.ts",
-    "update-wind-wave-data": "ts-node -r dotenv/config scripts/hindcast-wind-wave-data.ts"
+    "update-wind-wave-data": "ts-node -r dotenv/config scripts/hindcast-wind-wave-data.ts",
+    "resize-survey-images": "ts-node -r dotenv/config scripts/resize-survey-images.ts"
   },
   "dependencies": {
     "@google-cloud/storage": "^5.3.0",
@@ -93,7 +94,6 @@
     "moment": "^2.27.0",
     "moment-timezone": "^0.5.31",
     "multer": "^1.4.2",
-    "multer-google-storage": "^1.3.0",
     "node-xlsx": "^0.17.2",
     "objects-to-csv": "^1.3.6",
     "passport": "^0.4.1",
@@ -102,6 +102,7 @@
     "pg-native": "^3.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.5.4",
+    "sharp": "^0.30.6",
     "swagger-ui-express": "^4.1.6",
     "ts-exif-parser": "^0.2.1",
     "typeorm": "^0.2.41",
@@ -120,6 +121,7 @@
     "@types/node": "^13.9.1",
     "@types/passport": "^1.0.4",
     "@types/passport-strategy": "^0.2.35",
+    "@types/sharp": "^0.30.4",
     "@types/supertest": "^2.0.8",
     "faker": "^4.1.0",
     "firebase-admin": "^9.0.0",
