--- a/packages/website/.env.example
+++ b/packages/website/.env.example
@@ -16,5 +16,6 @@ REACT_APP_CARTO_API_KEY=
 # Mapbox token to access custom styles
 REACT_APP_MAPBOX_ACCESS_TOKEN=
 
-# Google Tag Manager
+# Google Analytics and Tag Manager
+REACT_APP_GA_TRACKING_ID=
 REACT_APP_GA_TAG_MANAGER_ID=
