--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -73,6 +73,7 @@
     "@nestjs/schedule": "^0.4.1",
     "@nestjs/swagger": "^4.8.0",
     "@nestjs/typeorm": "^7.0.0",
+    "@turf/boolean-point-in-polygon": "^6.5.0",
     "@turf/nearest-point": "^6.5.0",
     "@types/bluebird": "^3.5.32",
     "@types/node-xlsx": "^0.15.3",
