--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -95,7 +95,9 @@
     "moment": "^2.27.0",
     "moment-timezone": "^0.5.31",
     "multer": "^1.4.2",
+    "ndarray": "^1.0.19",
     "node-xlsx": "^0.17.2",
+    "numpy-parser": "^1.2.3",
     "objects-to-csv": "^1.3.6",
     "passport": "^0.6.0",
     "passport-custom": "^1.1.1",
