--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -34,7 +34,7 @@
     "start:dev": "cp .env.local .env && nodemon --config nodemon.json",
     "start:dev:db": "docker-compose up",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node --inspect dist/src/main.js",
+    "start:prod": "node dist/src/main.js",
     "lint": "eslint \"{src,apps,libs,test,scripts}/**/*.{ts,js}\" --max-warnings 0 --fix",
     "test": "cross-env NODE_ENV=test jest --config ./test/jest.json --silent",
     "test:watch": "jest --watch",
