--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -61,7 +61,8 @@
     "upload-sonde-data": "ts-node -r dotenv/config scripts/upload-sonde-data.ts",
     "backfill-sofar-time-series": "ts-node -r dotenv/config scripts/backfill-sofar-time-series.ts",
     "update-wind-wave-data": "ts-node -r dotenv/config scripts/hindcast-wind-wave-data.ts",
-    "resize-survey-images": "ts-node -r dotenv/config scripts/resize-survey-images.ts"
+    "resize-survey-images": "ts-node -r dotenv/config scripts/resize-survey-images.ts",
+    "fill-noaa-nearest-point": "ts-node -r dotenv/config scripts/noaa-availability.ts"
   },
   "dependencies": {
     "@google-cloud/storage": "^5.3.0",
@@ -73,6 +74,7 @@
     "@nestjs/schedule": "^0.4.1",
     "@nestjs/swagger": "^4.8.0",
     "@nestjs/typeorm": "^7.0.0",
+    "@turf/boolean-point-in-polygon": "^6.5.0",
     "@turf/nearest-point": "^6.5.0",
     "@types/bluebird": "^3.5.32",
     "@types/node-xlsx": "^0.15.3",
